--- a/src/App.css
+++ b/src/App.css
@@ -22,25 +22,27 @@ body {
 .members-table th {
   background-color: #4caf50; /* Green color for headings */
   color: white;
+  border-bottom: #4caf50;
 }
 
 .pagination-container {
   margin-top: 20px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 }
 
-.pagination-container button {
-  padding: 10px;
+button {
+  margin: 0 10px;
+  padding: 10px 20px;
+  background-color: green;
+  color: white;
+  border: none;
+  border-radius: 5px;
   cursor: pointer;
 }
 
-.pagination-info {
-  font-size: 14px;
-}
-
 button:disabled {
-  opacity: 0.5;
+  background-color: green;
   cursor: not-allowed;
 }
